--- a/math/Cargo.toml
+++ b/math/Cargo.toml
@@ -34,6 +34,8 @@ std = ["utils/std"]
 
 [dependencies]
 utils = { version = "0.6", path = "../utils/core", package = "winter-utils", default-features = false }
+uint = "0.9.3"
+serde = { version = "1.0", default-features = false }
 
 [dev-dependencies]
 criterion = "0.5"
